--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,38 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    focusFlow
+    FocusFlow
 {% endblock %}
 
 {% block body %}
-    <h1>hello, world</h1>
+    <div class="content">
+        <h1>FocusFlow</h1>
+        {% if tasks|length == 0 %}
+            <h3>There are no tasks. Create one below!</h3>
+        {% else %}
+            <table>
+                <tr>
+                    <th>Description</th>
+                    <th>Date Added</th>
+                    <th>Actions</th>
+                </tr>
+                {% for task in tasks %}
+                    <tr>
+                        <td>{{ task.content }}</td>
+                        <td>{{ task.date_created.date() }}</td>
+                        <td>
+                            <a href="/update/{{task.id}}">Update</a>
+                            <br>
+                            <a href="/delete/{{task.id}}">Delete</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </table>
+        {% endif %}
+
+        <form action="/" method="POST">
+            <input type="text" name="content" id="content">
+            <input type="submit" value="Add Task">
+        </form>
+    </div>
 {% endblock %}
