--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,18 @@
 {% endblock %}
 
 {% block body %}
-    <div class="content">
-        <h1>FocusFlow</h1>
+    <div class="container my-4">
+        <h1 class="text-center">FocusFlow</h1>
+        <form action="/" method="POST" class="m-4">
+            <div class="input-group">
+                <input type="text" name="content" id="content" class="form-control" placeholder="Add a new task" required>
+                <button type="submit" class="btn btn-success">Add Task</button>
+            </div>
+        </form>
         {% if tasks|length == 0 %}
-            <h3>There are no tasks. Create one below!</h3>
+            <h3 class="text-center">There are no tasks. Create one above!</h3>
         {% else %}
-            <table>
+            <table class="table table-dark m-4">
                 <tr>
                     <th>Description</th>
                     <th>Date Added</th>
@@ -21,18 +27,12 @@
                         <td>{{ task.content }}</td>
                         <td>{{ task.date_created.date() }}</td>
                         <td>
-                            <a href="/update/{{task.id}}">Update</a>
-                            <br>
-                            <a href="/delete/{{task.id}}">Delete</a>
+                            <a href="/update/{{task.id}}" class="btn btn-warning btn-sm">Update</a>
+                            <a href="/delete/{{task.id}}" class="btn btn-danger btn-sm">Delete</a>
                         </td>
                     </tr>
                 {% endfor %}
             </table>
         {% endif %}
-
-        <form action="/" method="POST">
-            <input type="text" name="content" id="content">
-            <input type="submit" value="Add Task">
-        </form>
     </div>
 {% endblock %}
