--- a/templates/update.html
+++ b/templates/update.html
@@ -5,12 +5,13 @@
 {% endblock %}
 
 {% block body %}
-    <div class="content">
-        <h1>Update Task</h1>
-
-        <form action="/update/{{ task.id }}" method="POST">
-            <input type="text" name="content" id="content" value="{{ task.content }}">
-            <input type="submit" value="Update Task">
+    <div class="container my-4">
+        <h1 class="text-center">Update Task</h1>
+        <form action="/update/{{ task.id }}" method="POST" class="m-4">
+            <div class="input-group">
+                <input type="text" name="content" id="content" class="form-control" value="{{ task.content }}" required>
+                <button type="submit" class="btn btn-primary">Update Task</button>
+            </div>
         </form>
     </div>
 {% endblock %}
